--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -521,10 +521,8 @@
 <td>Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat pohled.
 <p>Kliknut&iacute;m na prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i se zobrazen&iacute; znovu vycentruje na pozici ukazatele.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td colspan="2">Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> and the middle mouse button, then move the pointer.
-
+</td>
+<td colspan="2">Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Alternatively, hold the middle mouse button, then press and hold the right mouse button, then move the pointer.
 </p>
@@ -914,15 +912,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205440
+Cached time: 20260111205508
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.335 seconds
-Real time usage: 0.505 seconds
-Preprocessor visited node count: 1499/1000000
-Post&#8208;expand include size: 72619/2097152 bytes
-Template argument size: 27554/2097152 bytes
+CPU time usage: 0.364 seconds
+Real time usage: 1.034 seconds
+Preprocessor visited node count: 1498/1000000
+Post&#8208;expand include size: 72584/2097152 bytes
+Template argument size: 27519/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -930,19 +928,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  114.953      1 -total
- 20.50%   23.561      1 Template:OpenSCAD_Navigation
- 11.78%   13.546      1 Template:VersionMinus
- 11.46%   13.171      8 Template:ASCII
-  6.80%    7.818     69 Template:KEY
-  6.08%    6.988      1 Template:Userdocnavi/cs
-  4.87%    5.601      1 Template:MayaGesture_Navigation
-  4.37%    5.028      1 Template:Blender_Navigation
-  4.30%    4.946      1 Template:Gesture_Navigation
-  3.85%    4.428      1 Template:CAD_Navigation
+100.00%  188.264      1 -total
+ 12.95%   24.387      1 Template:OpenSCAD_Navigation
+  8.55%   16.089      1 Template:Userdocnavi/cs
+  7.65%   14.395      8 Template:ASCII
+  7.63%   14.371      1 Template:SiemensNX_Navigation
+  6.43%   12.111      1 Template:Touchpad_Navigation/cs
+  6.08%   11.441      1 Template:CAD_Navigation
+  5.93%   11.156      1 Template:VersionMinus
+  5.41%   10.194     69 Template:KEY
+  4.59%    8.648      1 Template:SolidWorks_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205439 and revision id 1736199. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205506 and revision id 1736205. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
