--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -59,7 +59,7 @@
 <p><span id="TechDraw_Views"></span>
 </p>
 <h4><span class="mw-headline" id="TechDraw-Ansichten">TechDraw-Ansichten</span></h4>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_View.svg&amp;filetimestamp=20240710144809&amp;.html" class="mw-file-description"><img src="../File/TechDraw_View.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_View.html" title="TechDraw View/de">Ansicht einf&uuml;gen</a>: F&uuml;gt eine Darstellung eines oder mehrerer Objekte hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Es kann eine einzelne Ansicht, eine <a href="../de/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/de">Ansichtengruppe</a>, eine <a href="../de/TechDraw_SpreadsheetView.html" title="TechDraw SpreadsheetView/de">Tabellenansicht</a>, eine <a href="../TechDraw_ArchView.html" title="TechDraw ArchView">Arch-Ansicht</a>, ein <a href="../de/TechDraw_Symbol.html" title="TechDraw Symbol/de">Zeichnungselement</a> oder eine <a href="../de/TechDraw_Image.html" title="TechDraw Image/de">Bildansicht</a> erstellen.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_View.svg&amp;filetimestamp=20240710144809&amp;.html" class="mw-file-description"><img src="../File/TechDraw_View.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_View.html" title="TechDraw View/de">Neue Ansicht</a>: F&uuml;gt eine Darstellung eines oder mehrerer Objekte hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Es k&ouml;nnen eine einzelne Ansicht, eine <a href="../de/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/de">Ansichtengruppe</a>, eine <a href="../de/TechDraw_SpreadsheetView.html" title="TechDraw SpreadsheetView/de">Tabellenansicht</a>, eine <a href="../TechDraw_ArchView.html" title="TechDraw ArchView">Arch-Ansicht</a>, ein <a href="../de/TechDraw_Symbol.html" title="TechDraw Symbol/de">Zeichnungselement</a> oder eine <a href="../de/TechDraw_Image.html" title="TechDraw Image/de">Bildansicht</a> erstellt werden.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_BrokenView.svg&amp;filetimestamp=20241021172252&amp;.html" class="mw-file-description"><img src="../File/TechDraw_BrokenView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_BrokenView.html" title="TechDraw BrokenView/de">Unterbrochene Ansicht einf&uuml;gen</a>: F&uuml;gt eine unterbrochene Ansicht von einem oder mehreren Objekten hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
 <ul><li><span id="TechDraw_SectionGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_SectionView.svg&amp;filetimestamp=20241124213855&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SectionView.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_SectionView.html" title="TechDraw SectionView/de">Schnittansicht einf&uuml;gen</a>: F&uuml;gt eine Schnittansicht zu einer vorhandenen Ansicht ein.</span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ComplexSection.svg&amp;filetimestamp=20241124220054&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ComplexSection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ComplexSection.html" title="TechDraw ComplexSection/de">Komplexe Schnittansicht einf&uuml;gen</a>: F&uuml;gt eine, auf einer Kontur (Schnittprofil) basierende, Schnittansicht zu einer vorhandenen Ansicht ein. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li></ul>
@@ -291,12 +291,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205234
+Cached time: 20260111205532
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.283 seconds
-Real time usage: 0.649 seconds
+CPU time usage: 0.391 seconds
+Real time usage: 0.751 seconds
 Preprocessor visited node count: 870/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -307,18 +307,18 @@ Unstrip post&#8208;expand size: 4462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   66.747      1 -total
- 23.41%   15.625      5 Template:VersionPlus/de
- 20.86%   13.926      1 Template:KEY
- 18.69%   12.476      1 Template:TechDraw_Tools_navi/de
- 11.16%    7.449      2 Template:Docnav/de
-  9.01%    6.014     25 Template:Version/de
-  5.87%    3.918      2 Template:Navigation_menu_2
-  5.75%    3.839      1 Template:TOCright
-  3.11%    2.074      1 Template:Userdocnavi/de
+100.00%   38.335      1 -total
+ 32.37%   12.410      1 Template:TechDraw_Tools_navi/de
+ 12.96%    4.967      2 Template:Docnav/de
+ 12.22%    4.684      1 Template:Userdocnavi/de
+ 11.54%    4.424     25 Template:Version/de
+ 11.17%    4.281      2 Template:Navigation_menu_2
+  7.87%    3.018      5 Template:VersionPlus/de
+  6.51%    2.494      1 Template:KEY
+  6.29%    2.410      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111205233 and revision id 1736187. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111205531 and revision id 1736207. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
