--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -523,10 +523,8 @@
 </p>
 </td>
 <td colspan="2">Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Alternatively, hold the middle mouse button, then press and hold the right mouse button, then move the pointer.
+<p>Alternativn&#283; podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i, pot&eacute; stiskn&#283;te a podr&#382;te prav&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td colspan="2">Hold the middle mouse button, then move the pointer.
@@ -912,15 +910,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205508
+Cached time: 20260111205540
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.364 seconds
-Real time usage: 1.034 seconds
-Preprocessor visited node count: 1498/1000000
-Post&#8208;expand include size: 72584/2097152 bytes
-Template argument size: 27519/2097152 bytes
+CPU time usage: 0.318 seconds
+Real time usage: 0.538 seconds
+Preprocessor visited node count: 1497/1000000
+Post&#8208;expand include size: 72545/2097152 bytes
+Template argument size: 27480/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -928,19 +926,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  188.264      1 -total
- 12.95%   24.387      1 Template:OpenSCAD_Navigation
-  8.55%   16.089      1 Template:Userdocnavi/cs
-  7.65%   14.395      8 Template:ASCII
-  7.63%   14.371      1 Template:SiemensNX_Navigation
-  6.43%   12.111      1 Template:Touchpad_Navigation/cs
-  6.08%   11.441      1 Template:CAD_Navigation
-  5.93%   11.156      1 Template:VersionMinus
-  5.41%   10.194     69 Template:KEY
-  4.59%    8.648      1 Template:SolidWorks_Navigation
+100.00%  135.127      1 -total
+ 13.48%   18.210      1 Template:Userdocnavi/cs
+ 10.90%   14.735      1 Template:Touchpad_Navigation/cs
+  8.90%   12.027      8 Template:ASCII
+  8.32%   11.238      1 Template:TinkerCAD_Navigation
+  7.01%    9.475      1 Template:SolidWorks_Navigation
+  4.85%    6.556      1 Template:Touchpad_Navigation
+  4.82%    6.515      1 Template:CAD_Navigation
+  4.79%    6.471      1 Template:OpenSCAD_Navigation
+  4.56%    6.157      1 Template:SiemensNX_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205506 and revision id 1736205. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205539 and revision id 1736209. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
