--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -525,10 +525,8 @@
 <td colspan="2">Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 <p>Alternativn&#283; podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i, pot&eacute; stiskn&#283;te a podr&#382;te prav&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td colspan="2">Hold the middle mouse button, then move the pointer.
-
+</td>
+<td colspan="2">Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Alternatively, hold both left and right mouse buttons, then move the pointer.
 </p>
@@ -910,15 +908,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205540
+Cached time: 20260111205604
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.318 seconds
-Real time usage: 0.538 seconds
-Preprocessor visited node count: 1497/1000000
-Post&#8208;expand include size: 72545/2097152 bytes
-Template argument size: 27480/2097152 bytes
+CPU time usage: 0.334 seconds
+Real time usage: 0.573 seconds
+Preprocessor visited node count: 1496/1000000
+Post&#8208;expand include size: 72497/2097152 bytes
+Template argument size: 27432/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -926,19 +924,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  135.127      1 -total
- 13.48%   18.210      1 Template:Userdocnavi/cs
- 10.90%   14.735      1 Template:Touchpad_Navigation/cs
-  8.90%   12.027      8 Template:ASCII
-  8.32%   11.238      1 Template:TinkerCAD_Navigation
-  7.01%    9.475      1 Template:SolidWorks_Navigation
-  4.85%    6.556      1 Template:Touchpad_Navigation
-  4.82%    6.515      1 Template:CAD_Navigation
-  4.79%    6.471      1 Template:OpenSCAD_Navigation
-  4.56%    6.157      1 Template:SiemensNX_Navigation
+100.00%  109.645      1 -total
+ 14.90%   16.342      8 Template:ASCII
+ 11.01%   12.067      1 Template:SolidWorks_Navigation
+ 10.77%   11.808      1 Template:Userdocnavi/cs
+  6.24%    6.839     69 Template:KEY
+  5.71%    6.265      1 Template:OpenSCAD_Navigation
+  5.03%    5.516      1 Template:Touchpad_Navigation
+  5.02%    5.506      1 Template:Touchpad_Navigation/cs
+  4.89%    5.358      1 Template:TinkerCAD_Navigation
+  4.29%    4.700      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205539 and revision id 1736209. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205603 and revision id 1736211. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
