--- a/wiki/de/TechDraw_Quadrants.html
+++ b/wiki/de/TechDraw_Quadrants.html
@@ -13,7 +13,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Knoten hinzuf&uuml;gen &rarr; Quadrantengrenzpunkte hinzuf&uuml;gen
+<td class="ctEven">TechDraw &rarr; Knoten hinzuf&uuml;gen &rarr; Quadrantengrenzpunkte
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -136,15 +134,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205506
+Cached time: 20260111205642
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.307 seconds
-Preprocessor visited node count: 335/1000000
-Post&#8208;expand include size: 27859/2097152 bytes
-Template argument size: 11077/2097152 bytes
+CPU time usage: 0.104 seconds
+Real time usage: 0.229 seconds
+Preprocessor visited node count: 334/1000000
+Post&#8208;expand include size: 27835/2097152 bytes
+Template argument size: 11053/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -152,19 +150,19 @@ Unstrip post&#8208;expand size: 2239/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.281      1 -total
- 25.39%   10.483      1 Template:TechDraw_Tools_navi/de
- 14.32%    5.910      1 Template:GuiCommand/de
- 13.47%    5.559      1 Template:Version/de
- 13.04%    5.383      2 Template:Navigation_menu_2
-  9.48%    3.912      1 Template:Userdocnavi/de
-  9.14%    3.775      1 Template:Code
-  7.23%    2.983      1 Template:Caption
-  6.73%    2.779      2 Template:Docnav/de
-  4.21%    1.737      1 Template:KEY
+100.00%   49.795      1 -total
+ 17.39%    8.658      1 Template:TechDraw_Tools_navi/de
+ 12.74%    6.344      1 Template:Userdocnavi/de
+ 11.70%    5.824      1 Template:MenuCommand
+  9.03%    4.498      2 Template:Navigation_menu_2
+  8.87%    4.417      2 Template:Docnav/de
+  8.76%    4.363      1 Template:GuiCommand/de
+  7.68%    3.823      1 Template:Code
+  7.38%    3.675      1 Template:Button
+  7.37%    3.670      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177745-0!canonical and timestamp 20260111205505 and revision id 1736203. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177745-0!canonical and timestamp 20260111205642 and revision id 1736213. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
