--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -527,11 +527,9 @@
 </p>
 </td>
 <td colspan="2">Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Alternatively, hold both left and right mouse buttons, then move the pointer.
+<p>Alternativn&#283; podr&#382;te lev&eacute; i prav&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 </p>
-</div></td></tr></tbody></table>
-
+</td></tr></tbody></table>
 <p><span id="Siemens_NX_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Siemens_NX_navigace">Siemens NX navigace</span></h3>
@@ -908,15 +906,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205604
+Cached time: 20260111205724
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.334 seconds
-Real time usage: 0.573 seconds
-Preprocessor visited node count: 1496/1000000
-Post&#8208;expand include size: 72497/2097152 bytes
-Template argument size: 27432/2097152 bytes
+CPU time usage: 0.361 seconds
+Real time usage: 1.123 seconds
+Preprocessor visited node count: 1495/1000000
+Post&#8208;expand include size: 72454/2097152 bytes
+Template argument size: 27389/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -924,19 +922,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  109.645      1 -total
- 14.90%   16.342      8 Template:ASCII
- 11.01%   12.067      1 Template:SolidWorks_Navigation
- 10.77%   11.808      1 Template:Userdocnavi/cs
-  6.24%    6.839     69 Template:KEY
-  5.71%    6.265      1 Template:OpenSCAD_Navigation
-  5.03%    5.516      1 Template:Touchpad_Navigation
-  5.02%    5.506      1 Template:Touchpad_Navigation/cs
-  4.89%    5.358      1 Template:TinkerCAD_Navigation
-  4.29%    4.700      2 Template:Docnav
+100.00%  195.538      1 -total
+ 12.26%   23.973      1 Template:Userdocnavi/cs
+ 11.93%   23.324      8 Template:ASCII
+  7.25%   14.177      2 Template:Docnav
+  6.38%   12.484     69 Template:KEY
+  6.21%   12.143      1 Template:OpenSCAD_Navigation
+  5.75%   11.244      1 Template:Touchpad_Navigation/cs
+  5.67%   11.091      1 Template:Revit_Navigation
+  5.21%   10.196      1 Template:Blender_Navigation
+  4.54%    8.875      9 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205603 and revision id 1736211. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205723 and revision id 1736217. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
