--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -532,7 +532,7 @@
 </td></tr></tbody></table>
 <p><span id="Siemens_NX_navigation"></span>
 </p>
-<h3><span class="mw-headline" id="Siemens_NX_navigace">Siemens NX navigace</span></h3>
+<h3><span class="mw-headline" id="Navigace_Siemens_NX">Navigace Siemens NX</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
 </p>
@@ -906,12 +906,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205724
+Cached time: 20260111205736
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.361 seconds
-Real time usage: 1.123 seconds
+CPU time usage: 0.265 seconds
+Real time usage: 0.336 seconds
 Preprocessor visited node count: 1495/1000000
 Post&#8208;expand include size: 72454/2097152 bytes
 Template argument size: 27389/2097152 bytes
@@ -922,19 +922,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  195.538      1 -total
- 12.26%   23.973      1 Template:Userdocnavi/cs
- 11.93%   23.324      8 Template:ASCII
-  7.25%   14.177      2 Template:Docnav
-  6.38%   12.484     69 Template:KEY
-  6.21%   12.143      1 Template:OpenSCAD_Navigation
-  5.75%   11.244      1 Template:Touchpad_Navigation/cs
-  5.67%   11.091      1 Template:Revit_Navigation
-  5.21%   10.196      1 Template:Blender_Navigation
-  4.54%    8.875      9 Template:MenuCommand
+100.00%   60.047      1 -total
+ 16.48%    9.898      8 Template:ASCII
+ 11.84%    7.110      1 Template:Blender_Navigation
+  7.57%    4.543      1 Template:Userdocnavi/cs
+  5.54%    3.327      1 Template:Touchpad_Navigation/cs
+  5.33%    3.201     69 Template:KEY
+  4.86%    2.916      1 Template:OpenSCAD_Navigation
+  4.57%    2.743      1 Template:TinkerCAD_Navigation
+  4.08%    2.452      1 Template:Touchpad_Navigation
+  4.00%    2.402      1 Template:CAD_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205723 and revision id 1736217. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205736 and revision id 1736219. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
