--- a/wiki/de/TechDraw_Quadrants.html
+++ b/wiki/de/TechDraw_Quadrants.html
@@ -62,12 +62,10 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Eine oder mehrere Kanten in einer Ansicht ausw&auml;hlen. Jede Kante kann ausgew&auml;hlt werden, nicht nur Kreise.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
-<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Quadrants.svg&amp;filetimestamp=20240710133049&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Quadrantengrenzpunkte hinzuf&uuml;gen</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Knoten hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Quadrants.svg&amp;filetimestamp=20240710133049&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Quadrantengrenzpunkte hinzuf&uuml;gen</b> ausw&auml;hlen.</li></ul></li></ol>
-</div>
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Quadrants.svg&amp;filetimestamp=20240710133049&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Quadrantengrenzpunkte</a></span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Knoten hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Quadrants.svg&amp;filetimestamp=20240710133049&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Quadrantengrenzpunkte</b> ausw&auml;hlen.</li></ul></li></ol>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
@@ -134,15 +132,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205642
+Cached time: 20260111205804
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.104 seconds
-Real time usage: 0.229 seconds
-Preprocessor visited node count: 334/1000000
-Post&#8208;expand include size: 27835/2097152 bytes
-Template argument size: 11053/2097152 bytes
+CPU time usage: 0.087 seconds
+Real time usage: 0.219 seconds
+Preprocessor visited node count: 333/1000000
+Post&#8208;expand include size: 27811/2097152 bytes
+Template argument size: 11029/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -150,19 +148,19 @@ Unstrip post&#8208;expand size: 2239/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.795      1 -total
- 17.39%    8.658      1 Template:TechDraw_Tools_navi/de
- 12.74%    6.344      1 Template:Userdocnavi/de
- 11.70%    5.824      1 Template:MenuCommand
-  9.03%    4.498      2 Template:Navigation_menu_2
-  8.87%    4.417      2 Template:Docnav/de
-  8.76%    4.363      1 Template:GuiCommand/de
-  7.68%    3.823      1 Template:Code
-  7.38%    3.675      1 Template:Button
-  7.37%    3.670      1 Template:Caption
+100.00%   64.758      1 -total
+ 31.25%   20.238      1 Template:TechDraw_Tools_navi/de
+ 20.84%   13.495      1 Template:Userdocnavi/de
+ 18.20%   11.783      2 Template:Navigation_menu_2
+ 10.96%    7.098      2 Template:Docnav/de
+  9.87%    6.392      1 Template:GuiCommand/de
+  6.08%    3.937      1 Template:Code
+  4.80%    3.108      1 Template:Version/de
+  4.55%    2.949      1 Template:Caption
+  3.76%    2.437      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177745-0!canonical and timestamp 20260111205642 and revision id 1736213. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177745-0!canonical and timestamp 20260111205804 and revision id 1736221. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
