--- a/wiki/Installing_on_Windows.html
+++ b/wiki/Installing_on_Windows.html
@@ -13,7 +13,7 @@
 <li><a href="ro/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--low" title="Instalarea sub Windows (12% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="fi/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--low" title="Installing on Windows/fi (0% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="sv/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Windows (4% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><a href="cs/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--med" title="Instalace na Windows (36% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
+<li><a href="cs/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--complete" title="Instalace na Windows (100% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="bg/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--low" title="&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; Windows (8% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="ru/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--med" title="&#1059;&#1089;&#1090;&#1072;&#1085;&#1086;&#1074;&#1082;&#1072; &#1074; Windows (64% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="uk/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--low" title="Installing on Windows/uk (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -102,33 +102,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111085805
+Cached time: 20260111205840
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.131 seconds
+CPU time usage: 0.127 seconds
+Real time usage: 0.163 seconds
 Preprocessor visited node count: 275/1000000
 Post&#8208;expand include size: 7516/2097152 bytes
 Template argument size: 2335/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 6/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 5310/5000000 bytes
+Unstrip post&#8208;expand size: 5316/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.806      1 -total
- 30.18%    4.469      1 Template:Userdocnavi
- 19.70%    2.917      6 Template:Code
- 17.62%    2.609      1 Template:Navigation_menu_2
- 16.75%    2.480      2 Template:Docnav
- 10.69%    1.583      1 Template:Incode
-  8.64%    1.280      3 Template:FileName
-  8.54%    1.264      1 Template:TOCright
+100.00%   20.539      1 -total
+ 33.46%    6.873      1 Template:Userdocnavi
+ 23.00%    4.723      2 Template:Docnav
+ 14.71%    3.021      6 Template:Code
+ 11.91%    2.447      3 Template:FileName
+ 11.79%    2.422      1 Template:Navigation_menu_2
+  6.41%    1.317      1 Template:Incode
+  5.90%    1.212      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61-0!canonical and timestamp 20260111085805 and revision id 1732372. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61-0!canonical and timestamp 20260111205840 and revision id 1732372. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
