--- a/wiki/Macro_FCInfo.html
+++ b/wiki/Macro_FCInfo.html
@@ -1,5 +1,5 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCInfo</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+FCInfo&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Information (86% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Information (89% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="fr/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FCInfo (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="it/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Info in scheda (54% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -659,12 +659,12 @@ Here another post of <a rel="nofollow" class="external text" href="https://forum
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260110132913
+Cached time: 20260111210015
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.177 seconds
-Real time usage: 0.195 seconds
+CPU time usage: 0.204 seconds
+Real time usage: 0.306 seconds
 Preprocessor visited node count: 1630/1000000
 Post&#8208;expand include size: 40661/2097152 bytes
 Template argument size: 5117/2097152 bytes
@@ -675,19 +675,19 @@ Unstrip post&#8208;expand size: 15705/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.810      1 -total
- 11.17%    4.333     10 Template:Code
-  7.48%    2.902      1 Template:Macro
-  4.52%    1.753     44 Template:LineEdit
-  4.43%    1.719      8 Template:RadioButton
-  4.40%    1.709     10 Template:CheckBox
-  3.58%    1.389     25 Template:Button
-  3.36%    1.303     30 Template:False
-  2.91%    1.128      5 Template:SpinBox
-  2.82%    1.095      4 Template:ComboBox
+100.00%   79.411      1 -total
+  8.61%    6.841      8 Template:RadioButton
+  8.48%    6.732     10 Template:Code
+  6.27%    4.976     44 Template:LineEdit
+  5.57%    4.427      1 Template:Macro
+  5.47%    4.347     10 Template:CheckBox
+  5.35%    4.249     19 Template:True
+  5.24%    4.161      5 Template:SpinBox
+  5.03%    3.994      1 Template:CodeDownload
+  4.65%    3.691      4 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:10892-0!canonical and timestamp 20260110132917 and revision id 1730718. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:10892-0!canonical and timestamp 20260111210015 and revision id 1730718. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
